syntax = "proto3";
option go_package = "github.com/rancher/opni/plugins/aiops/pkg/apis/metricai";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";

package metricai;

service MetricAI {
    rpc ListClusters(google.protobuf.Empty) returns(MetricAIIdList) {
        option (google.api.http) = {
            get: "/metricai/listclusters"
        };
    }
    rpc ListNamespaces(MetricAIId) returns(MetricAIIdList) {
        option (google.api.http) = {
            get: "/metricai/listnamespaces/{id}"
        };
    }
    rpc ListJobs(google.protobuf.Empty) returns(MetricAIIdList) {
        option (google.api.http) = {
            get: "/metricai/listjobs"
        };
    }
    rpc ListJobRuns(MetricAIId) returns(MetricAIIdList) {
        option (google.api.http) = {
            get: "/metricai/listjobruns/{id}"
        };
    }
    rpc CreateJob(MetricAICreateJobRequest) returns(MetricAIAPIResponse) {
        option (google.api.http) = {
            post: "/metricai/createjob/{clusterId}"
            body: "*"
        };
    }

    rpc RunJob(MetricAIId) returns(MetricAIRunJobResponse) {
        option (google.api.http) = {
            post: "/metricai/runjob/{id}"
        };
    }

    rpc DeleteJob(MetricAIId) returns(MetricAIAPIResponse) {
        option (google.api.http) = {
            delete: "/metricai/deletejob/{id}"
        };
    }
    rpc GetJobRunResult(MetricAIId) returns(MetricAIJobRunResult) {
        option (google.api.http) = {
            get: "/metricai/getjobrunresult/{id}"
        };
    }
    rpc GetJob(MetricAIId) returns(MetricAIJobStatus) {
        option (google.api.http) = {
            get: "/metricai/getjob/{id}"
        };
    }
}

message MetricAIJobStatus {
    string clusterId = 1; 
    string jobCreateTime = 2;
    string jobId = 3;
    repeated string namespaces = 4;
    string jobDescription = 5;
}

message MetricAIJobRunResult {
    string jobId = 1;
    string jobRunId = 2;
    string jobRunResult = 3;
    string jobRunCreateTime = 4; 
    string jobRunBaseTime = 5;
    string status = 6;
}

message MetricAIIdList {
    repeated string items = 1;
}

message MetricAICreateJobRequest {
    string clusterId = 1;
    repeated string namespaces = 2;
    string jobId = 3;
    string jobDescription = 4;
}

message MetricAIId {
    string id = 1;
}


message MetricAIAPIResponse {
    string status = 1;
    string submittedTime = 2;
    string description = 3;
}
message MetricAIRunJobResponse {
    string status = 1;
    string submittedTime = 2;
    string description = 3;
    string jobRunId = 4;
}

